--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,69 @@ dmd.xcodeproj/project.xcworkspace/xcuserdata
 src/*.bak
 src/*.lib
 tags
+
+# Generated D source
+
+src/access.d
+src/aggregate.d
+src/aliasthis.d
+src/apply.d
+src/argtypes.d
+src/arrayop.d
+src/arraytypes.d
+src/attrib.d
+src/builtin.d
+src/canthrow.d
+src/dcast.d
+src/dclass.d
+src/clone.d
+src/cond.d
+src/constfold.d
+src/cppmangle.d
+src/ctfeexpr.d
+src/declaration.d
+src/delegatize.d
+src/doc.d
+src/dsymbol.d
+src/denum.d
+src/expression.d
+src/func.d
+src/hdrgen.d
+src/id.d
+src/identifier.d
+src/imphint.d
+src/dimport.d
+src/dinifile.d
+src/inline.d
+src/init.d
+src/dinterpret.d
+src/json.d
+src/lexer.d
+src/link.d
+src/dmacro.d
+src/dmangle.d
+src/mars.d
+src/dmodule.d
+src/mtype.d
+src/nspace.d
+src/opover.d
+src/optimize.d
+src/parse.d
+src/sapply.d
+src/dscope.d
+src/sideeffect.d
+src/statement.d
+src/staticassert.d
+src/dstruct.d
+src/target.d
+src/dtemplate.d
+src/traits.d
+src/dunittest.d
+src/utf.d
+src/dversion.d
+src/visitor.d
+src/lib.d
+src/nogc.d
+src/root/file.d
+src/root/filename.d
+src/root/speller.d
