--- a/src/settings.json
+++ b/src/settings.json
@@ -2396,7 +2396,7 @@
                 "function errorSupplemental",
                 "function deprecation",
                 "function verrorPrint",
-                "externc function verror",
+                "function verror",
                 "function verrorSupplemental",
                 "function vwarning",
                 "function vdeprecation",
